Took one step towards automated memory management (https://github.com/kmalakoff/knockback/issues/2) by introducing kb.vmDestroy(). Moved over view models from being coffee script classes to be simple functions like in the Knockout 1.3 beta blog entry (http://blog.stevensanderson.com/2011/08/31/knockout-1-3-0-beta-available/). Bumped version to 0.3.0.

--- a/test/interactive/test.html
+++ b/test/interactive/test.html
@@ -117,21 +117,18 @@
       label_date:         { key: 'label_date' }
     }, view_model);
 
-    var ContactViewModel = (function() {
-      function ContactViewModel(model) {
-        kb.observables(kb.locale_manager, {
-          label_name:     { key: 'label_name' },
-          label_email:    { key: 'label_email' },
-          label_date:     { key: 'label_date' }
-        }, this);
-        kb.observables(model, {
-          name:           { key: 'name', write: true },
-          email:          { key: 'email', write: true },
-          date:           { key: 'date', write: true, localizer: function(value) { return new LongDateLocalizer(value); } }
-        }, this);
-      }
-      return ContactViewModel;
-    })();
+    var ContactViewModel = function(model) {
+      kb.observables(kb.locale_manager, {
+        label_name:     { key: 'label_name' },
+        label_email:    { key: 'label_email' },
+        label_date:     { key: 'label_date' }
+      }, this);
+      kb.observables(model, {
+        name:           { key: 'name', write: true },
+        email:          { key: 'email', write: true },
+        date:           { key: 'date', write: true, localizer: function(value) { return new LongDateLocalizer(value); } }
+      }, this);
+    };
     var collection_sync = Knockback.collectionSync(collection, view_model.contacts, {
       viewModelCreate:  function(model)         { return new ContactViewModel(model); },
       viewModelDestroy: function(view_model)    { return view_model.destroy(); },
