Copied and included tests for Knocout1.3.beta. Removed aliases to ModelAttributeObservable -> Observable and ModelAttributeObservables -> Observables.

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -14,16 +14,28 @@
 </head>
 <body>
   <div class="test-block">
-    <h1 class="qunit-header">Interactive Test</h1>
+    <h1 class="qunit-header">Interactive Tests (knockout-1.2.1-kmalakoff.js)</h1>
     <iframe class="full_width" src="interactive/test.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
-    <h1 class="qunit-header">Knockback.js - All Tests</h1>
+    <h1 class="qunit-header">Knockback.js - All Tests (knockout-1.2.1-kmalakoff.js)</h1>
     <iframe src="backbone_modelref/test.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_collection_sync/test.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_localized_observable/test.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_model_attribute_observable/test.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_model_attribute_observables/test.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observable/test.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observables/test.html" scrolling="auto" frameborder="0"></iframe>
+  </div>
+  <div class="test-block">
+    <h1 class="qunit-header">Interactive Tests (knockout-1.3.beta-kmalakoff.js)</h1>
+    <iframe class="full_width" src="interactive/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
+  </div>
+  <div class="test-block">
+    <h1 class="qunit-header">Knockback.js - All Tests (knockout-1.3.beta-kmalakoff.js)</h1>
+    <iframe src="backbone_modelref/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_collection_sync/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_localized_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observables/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 </body>
 </html>
