--- a/test/interactive/test-1.3.beta.html
+++ b/test/interactive/test-1.3.beta.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="../vendor/optional/jquery.tmpl.js"></script>
 
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../knockout-1.2.1.debug-kmalakoff.js"></script>
+  <script type="text/javascript" src="../../knockout-1.3.beta.debug-kmalakoff.js"></script>
   <script type="text/javascript" src="../vendor/underscore.js"></script>
   <script type="text/javascript" src="../vendor/backbone.js"></script>
   <script type="text/javascript" src="../vendor/optional/backbone-modelref.js"></script>
