--- a/test/knockback_observable/test-1.3.beta.html
+++ b/test/knockback_observable/test-1.3.beta.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback.CollectionSync Test Suite</title>
+  <title>Knockback.Observable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../knockout-1.2.1.debug-kmalakoff.js"></script>
+  <script type="text/javascript" src="../../knockout-1.3.beta.debug-kmalakoff.js"></script>
   <script type="text/javascript" src="../vendor/underscore.js"></script>
   <script type="text/javascript" src="../vendor/backbone.js"></script>
 
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback.CollectionSync Test Suite</h1>
+    <h1 id="qunit-header">Knockback.Observable Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
