--- a/test/backbone_modelref/test-1.3.beta.html
+++ b/test/backbone_modelref/test-1.3.beta.html
@@ -1,17 +1,21 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback.CollectionSync Test Suite</title>
+  <title>Knockback with Backbone.ModelRef Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../knockout-1.2.1.debug-kmalakoff.js"></script>
+  <script type="text/javascript" src="../../knockout-1.3.beta.debug-kmalakoff.js"></script>
   <script type="text/javascript" src="../vendor/underscore.js"></script>
   <script type="text/javascript" src="../vendor/backbone.js"></script>
+  <script type="text/javascript" src="../vendor/optional/backbone-modelref.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
 
   <!-- HELPERS -->
   <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
+  <script type="text/javascript" src="../vendor/optional/globalize/globalize.js"></script>
+  <script type="text/javascript" src="../vendor/optional/globalize/globalize.culture.en-GB.js"></script>
+  <script type="text/javascript" src="../vendor/optional/globalize/globalize.culture.fr-FR.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
@@ -22,7 +26,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback.CollectionSync Test Suite</h1>
+    <h1 id="qunit-header">Knockback with Backbone.ModelRef Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
