--- a/test/backbone_modelref/test.html
+++ b/test/backbone_modelref/test.html
@@ -3,7 +3,7 @@
 <head>
   <title>Knockback with Backbone.ModelRef Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../vendor/knockout-1.2.1.debug-kmalakoff.js"></script>
+  <script type="text/javascript" src="../../knockout-1.2.1.debug-kmalakoff.js"></script>
   <script type="text/javascript" src="../vendor/underscore.js"></script>
   <script type="text/javascript" src="../vendor/backbone.js"></script>
   <script type="text/javascript" src="../vendor/optional/backbone-modelref.js"></script>
