--- a/test/knockback_collection_sync/test-1.3.beta.html
+++ b/test/knockback_collection_sync/test-1.3.beta.html
@@ -3,7 +3,7 @@
 <head>
   <title>Knockback.CollectionSync Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../knockout-1.2.1.debug-kmalakoff.js"></script>
+  <script type="text/javascript" src="../../knockout-1.3.beta.debug-kmalakoff.js"></script>
   <script type="text/javascript" src="../vendor/underscore.js"></script>
   <script type="text/javascript" src="../vendor/backbone.js"></script>
 
