--- a/test/knockback_observables/test-1.3.beta.html
+++ b/test/knockback_observables/test-1.3.beta.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback.CollectionSync Test Suite</title>
+  <title>Knockback.Observables Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../knockout-1.2.1.debug-kmalakoff.js"></script>
+  <script type="text/javascript" src="../../knockout-1.3.beta.debug-kmalakoff.js"></script>
   <script type="text/javascript" src="../vendor/underscore.js"></script>
   <script type="text/javascript" src="../vendor/backbone.js"></script>
 
@@ -12,6 +12,9 @@
 
   <!-- HELPERS -->
   <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
+  <script type="text/javascript" src="../vendor/optional/globalize/globalize.js"></script>
+  <script type="text/javascript" src="../vendor/optional/globalize/globalize.culture.en-GB.js"></script>
+  <script type="text/javascript" src="../vendor/optional/globalize/globalize.culture.fr-FR.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
@@ -22,7 +25,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback.CollectionSync Test Suite</h1>
+    <h1 id="qunit-header">Knockback.Observables Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
