Got Knockback working with non-patched versions of Knockout 1.2.1 and 1.3.0beta

--- a/test/interactive/test.html
+++ b/test/interactive/test.html
@@ -4,22 +4,22 @@
   <title>Knockback Interactive Tests</title>
   <!-- HELPERS -->
   <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
-  <script type="text/javascript" src="../vendor/optional/jquery.tmpl.js"></script>
+  <script type="text/javascript" src="../vendor/jquery.tmpl.js"></script>
 
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../knockout-1.2.1.debug-kmalakoff.js"></script>
-  <script type="text/javascript" src="../vendor/underscore.js"></script>
-  <script type="text/javascript" src="../vendor/backbone.js"></script>
-  <script type="text/javascript" src="../vendor/optional/backbone-modelref.js"></script>
+  <script type="text/javascript" src="../../dependencies/knockout-1.2.1.debug.js"></script>
+  <script type="text/javascript" src="../../dependencies/underscore.js"></script>
+  <script type="text/javascript" src="../../dependencies/backbone.js"></script>
+  <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
 
   <!-- HELPERS -->
   <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
-  <script type="text/javascript" src="../vendor/optional/globalize/globalize.js"></script>
-  <script type="text/javascript" src="../vendor/optional/globalize/globalize.culture.en-GB.js"></script>
-  <script type="text/javascript" src="../vendor/optional/globalize/globalize.culture.fr-FR.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
 
   <!-- STYLING -->
   <style type="text/css">
