--- a/test/knockback_collection_sync/test.html
+++ b/test/knockback_collection_sync/test.html
@@ -3,9 +3,9 @@
 <head>
   <title>Knockback.CollectionSync Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../knockout-1.2.1.debug-kmalakoff.js"></script>
-  <script type="text/javascript" src="../vendor/underscore.js"></script>
-  <script type="text/javascript" src="../vendor/backbone.js"></script>
+  <script type="text/javascript" src="../../dependencies/knockout-1.2.1.debug.js"></script>
+  <script type="text/javascript" src="../../dependencies/underscore.js"></script>
+  <script type="text/javascript" src="../../dependencies/backbone.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
