--- a/test/knockback_observables/test.html
+++ b/test/knockback_observables/test.html
@@ -3,18 +3,18 @@
 <head>
   <title>Knockback.Observables Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../knockout-1.2.1.debug-kmalakoff.js"></script>
-  <script type="text/javascript" src="../vendor/underscore.js"></script>
-  <script type="text/javascript" src="../vendor/backbone.js"></script>
+  <script type="text/javascript" src="../../dependencies/knockout-1.2.1.debug.js"></script>
+  <script type="text/javascript" src="../../dependencies/underscore.js"></script>
+  <script type="text/javascript" src="../../dependencies/backbone.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
 
   <!-- HELPERS -->
   <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
-  <script type="text/javascript" src="../vendor/optional/globalize/globalize.js"></script>
-  <script type="text/javascript" src="../vendor/optional/globalize/globalize.culture.en-GB.js"></script>
-  <script type="text/javascript" src="../vendor/optional/globalize/globalize.culture.fr-FR.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
