--- a/test/knockback_observable/test-1.3.beta.html
+++ b/test/knockback_observable/test-1.3.beta.html
@@ -3,9 +3,9 @@
 <head>
   <title>Knockback.Observable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../knockout-1.3.beta.debug-kmalakoff.js"></script>
-  <script type="text/javascript" src="../vendor/underscore.js"></script>
-  <script type="text/javascript" src="../vendor/backbone.js"></script>
+  <script type="text/javascript" src="../../dependencies/knockout-1.3.0beta.debug.js"></script>
+  <script type="text/javascript" src="../../dependencies/underscore.js"></script>
+  <script type="text/javascript" src="../../dependencies/backbone.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
