--- a/test/knockback_collection_observable/test-1.3.beta.html
+++ b/test/knockback_collection_observable/test-1.3.beta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback.CollectionSync Test Suite</title>
+  <title>Knockback.CollectionObservable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../dependencies/knockout-1.3.0beta.debug.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback.CollectionSync Test Suite</h1>
+    <h1 id="qunit-header">Knockback.CollectionObservable Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
