Added kb.triggeredObservable for observing Backbone.Events trigger.

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -24,6 +24,7 @@
     <iframe src="knockback_localized_observable/test.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observable/test.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observables/test.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_triggered_observable/test.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
     <h1 class="qunit-header">Interactive Tests (knockout-1.3.beta.js)</h1>
@@ -36,6 +37,7 @@
     <iframe src="knockback_localized_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observables/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_triggered_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 </body>
 </html>
