--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -25,6 +25,7 @@
     <iframe src="knockback_observable/test.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observables/test.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_triggered_observable/test.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_view_model/test.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
     <h1 class="qunit-header">Interactive Tests (knockout-1.3.beta.js)</h1>
@@ -38,6 +39,7 @@
     <iframe src="knockback_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observables/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_triggered_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_view_model/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 </body>
 </html>
