--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -19,13 +19,14 @@
   </div>
   <div class="test-block">
     <h1 class="qunit-header">Knockback.js - All Tests (knockout-1.2.1.js)</h1>
-    <iframe src="backbone_modelref/test.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_collection_observable/test.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_formatted_observable/test.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_localized_observable/test.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observable/test.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observables/test.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_triggered_observable/test.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_view_model/test.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="backbone_modelref/test.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
     <h1 class="qunit-header">Interactive Tests (knockout-1.3.beta.js)</h1>
@@ -33,13 +34,14 @@
   </div>
   <div class="test-block">
     <h1 class="qunit-header">Knockback.js - All Tests (knockout-1.3.beta.js)</h1>
-    <iframe src="backbone_modelref/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_collection_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_formatted_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_localized_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_observables/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_triggered_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
     <iframe src="knockback_view_model/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="backbone_modelref/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 </body>
 </html>
