--- a/test/interactive/test-1.3.beta.html
+++ b/test/interactive/test-1.3.beta.html
@@ -1,141 +1,143 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-  <title>Knockback Interactive Tests</title>
-  <!-- HELPERS -->
-  <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
-  <script type="text/javascript" src="../vendor/jquery.tmpl.js"></script>
+  <!-- Support Localization -->
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <head>
+    <title>Knockback Interactive Tests</title>
+    <!-- HELPERS -->
+    <script type="text/javascript" src="../vendor/qunit/jquery.js"></script>
+    <script type="text/javascript" src="../vendor/jquery.tmpl.js"></script>
 
-  <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../dependencies/knockout-1.3.0beta.debug.js"></script>
-  <script type="text/javascript" src="../../dependencies/underscore.js"></script>
-  <script type="text/javascript" src="../../dependencies/backbone.js"></script>
-  <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.js"></script>
+    <!-- LIBRARY DEPENDENCIES -->
+    <script type="text/javascript" src="../../dependencies/knockout-1.3.0beta.debug.js"></script>
+    <script type="text/javascript" src="../../dependencies/underscore.js"></script>
+    <script type="text/javascript" src="../../dependencies/backbone.js"></script>
+    <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.js"></script>
 
-  <!-- LIBRARY -->
-  <script type="text/javascript" src="../../knockback.js"></script>
+    <!-- LIBRARY -->
+    <script type="text/javascript" src="../../knockback.js"></script>
 
-  <!-- HELPERS -->
-  <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
-  <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
-  <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
-  <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
+    <!-- HELPERS -->
+    <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
+    <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
+    <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
+    <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
 
-  <!-- STYLING -->
-  <style type="text/css">
-    h1, div.header {
-      width: 100%; margin: 0;
-      border-style:solid; border-width:1px; background: #ADADEB;
-    }
-    h2 {
-      font-size:20px;
-    }
-    div.header {
-       width: 100%; float: left; display: block; background: #ADADEB;
-    }
-    div.contact {
-      position: relative;
-      width: 250px; height: 100%; float: left; display: block; margin: 5px; padding: 0px 10px 10px 10px;
-      border-style:solid; border-width:1px; background: #E9D4FF;
-    }
-    div.contact label {width: 40%; text-align:right; float: left; font-size:18px;}
-    div.contact input {width: 55%; float: right;}
-    div.contact button {position: absolute; right:10px; top:15px;}
-  </style>
-</head>
-<body>
-  <h1>Knockback.js Interactive Tests</h1>
-  <div class="header">
-    <button data-bind="text: label_button_new, click: onAdd"></button>
-    <select data-bind="options: available_languages, value: selected_language"></select>
-    <div class="contact new">
-      <h3 data-bind="text: label_title_new"></h3>
-      <div><label data-bind="text: label_name"></label><input data-bind="value: new_name" /></div>
-      <div><label data-bind="text: label_email"></label><input data-bind="value: new_email" /></div>
-      <div><label data-bind="text: label_date"></label><input data-bind="value: new_date" /></div>
-    </div>
-  </div>
-  <div class="body">
-    <div data-bind='template: {name: "contact_template", foreach: contacts}'> </div>
-  </div>
-
-  <script type="text/html" id="contact_template">
-    <div class="contact">
-      <h3><span data-bind="text: name" /> (<span data-bind="text: email" />)</h3>
-      <div><label data-bind="text: label_name"></label><input data-bind="value: name" /></div>
-      <div><label data-bind="text: label_email"></label><input data-bind="value: email" /></div>
-      <div><label data-bind="text: label_date"></label><input data-bind="value: date" /></div>
-    </div>
-  </script>
-
-  <script type='text/javascript'>
-    <!-- SEE examples_lib for LocaleManager, Contact, ContactsCollection, and LongDateLocalizer -->
-
-    kb.locale_manager = new LocaleManager('en', {
-      'en': {
-        label_title_new: "New Contact",
-        label_button_new: "Add",
-        label_name: "Name:",
-        label_email: "Email:",
-        label_date: "Birthday:"
-      },
-      'fr-FR': {
-        label_title_new: "Nouveau Contact",
-        label_button_new: "Ajouter",
-        label_new: "Nouveau:",
-        label_name: "Nom:",
-        label_email: "Email:",
-        label_date: "Date de Naissance:"
+    <!-- STYLING -->
+    <style type="text/css">
+      h1, div.header {
+        width: 100%; margin: 0;
+        border-style:solid; border-width:1px; background: #ADADEB;
       }
-    });
-    var collection = new ContactsCollection([
-      {name: 'Moe',   email: 'moe@3s.com',    date: new Date(1897, 6, 19)},
-      {name: 'Larry', email: 'larry@3s.com',  date: new Date(1902, 10, 5)},
-      {name: 'Curly', email: 'curly@3s.com',  date: new Date(1903, 10, 22)}
-    ]);
-    var view_model = {
-      contacts:               ko.observableArray([]),
-      available_languages:    ko.observableArray(['en', 'fr-FR']),
-      new_name:               ko.observable(''),
-      new_email:              ko.observable(''),
-      new_date:               new LongDateLocalizer(new Date()),
-      onAdd:  function()      {
-        collection.add({name: this.new_name(), email: this.new_email(), date: this.new_date.observedValue()});
-        this.new_name(''); this.new_email(''); this.new_date(new Date());
+      h2 {
+        font-size:20px;
       }
-    };
-    view_model.selected_language = ko.dependentObservable({
-      read:   function()      { return kb.locale_manager.getLocale(); },
-      write:  function(value) { return kb.locale_manager.setLocale(value); },
-      owner: view_model
-    });
-    kb.observables(kb.locale_manager, {
-      label_title_new:    { key: 'label_title_new' },
-      label_button_new:   { key: 'label_button_new' },
-      label_name:         { key: 'label_name' },
-      label_email:        { key: 'label_email' },
-      label_date:         { key: 'label_date' }
-    }, view_model);
+      div.header {
+         width: 100%; float: left; display: block; background: #ADADEB;
+      }
+      div.contact {
+        position: relative;
+        width: 250px; height: 100%; float: left; display: block; margin: 5px; padding: 0px 10px 10px 10px;
+        border-style:solid; border-width:1px; background: #E9D4FF;
+      }
+      div.contact label {width: 40%; text-align:right; float: left; font-size:18px;}
+      div.contact input {width: 55%; float: right;}
+      div.contact button {position: absolute; right:10px; top:15px;}
+    </style>
+  </head>
+  <body>
+    <h1>Knockback.js Interactive Tests</h1>
+    <div class="header">
+      <button data-bind="text: label_button_new, click: onAdd"></button>
+      <select data-bind="options: available_languages, value: selected_language"></select>
+      <div class="contact new">
+        <h3 data-bind="text: label_title_new"></h3>
+        <div><label data-bind="text: label_name"></label><input data-bind="value: new_name" /></div>
+        <div><label data-bind="text: label_email"></label><input data-bind="value: new_email" /></div>
+        <div><label data-bind="text: label_date"></label><input data-bind="value: new_date" /></div>
+      </div>
+    </div>
+    <div class="body">
+      <div data-bind='template: {name: "contact_template", foreach: contacts}'> </div>
+    </div>
 
-    var ContactViewModel = function(model) {
+    <script type="text/html" id="contact_template">
+      <div class="contact">
+        <h3><span data-bind="text: name" /> (<span data-bind="text: email" />)</h3>
+        <div><label data-bind="text: label_name"></label><input data-bind="value: name" /></div>
+        <div><label data-bind="text: label_email"></label><input data-bind="value: email" /></div>
+        <div><label data-bind="text: label_date"></label><input data-bind="value: date" /></div>
+      </div>
+    </script>
+
+    <script type='text/javascript'>
+      <!-- SEE examples_lib for LocaleManager, Contact, ContactsCollection, and LongDateLocalizer -->
+
+      kb.locale_manager = new LocaleManager('en', {
+        'en': {
+          label_title_new: "New Contact",
+          label_button_new: "Add",
+          label_name: "Name:",
+          label_email: "Email:",
+          label_date: "Birthday:"
+        },
+        'fr-FR': {
+          label_title_new: "Nouveau Contact",
+          label_button_new: "Ajouter",
+          label_new: "Nouveau:",
+          label_name: "Nom:",
+          label_email: "Email:",
+          label_date: "Date de Naissance:"
+        }
+      });
+      var collection = new ContactsCollection([
+        {name: 'Moe',   email: 'moe@3s.com',    date: new Date(1897, 6, 19)},
+        {name: 'Larry', email: 'larry@3s.com',  date: new Date(1902, 10, 5)},
+        {name: 'Curly', email: 'curly@3s.com',  date: new Date(1903, 10, 22)}
+      ]);
+      var view_model = {
+        contacts:               ko.observableArray([]),
+        available_languages:    ko.observableArray(['en', 'fr-FR']),
+        new_name:               ko.observable(''),
+        new_email:              ko.observable(''),
+        new_date:               new LongDateLocalizer(new Date()),
+        onAdd:  function()      {
+          collection.add({name: this.new_name(), email: this.new_email(), date: this.new_date.observedValue()});
+          this.new_name(''); this.new_email(''); this.new_date(new Date());
+        }
+      };
+      view_model.selected_language = ko.dependentObservable({
+        read:   function()      { return kb.locale_manager.getLocale(); },
+        write:  function(value) { return kb.locale_manager.setLocale(value); },
+        owner: view_model
+      });
       kb.observables(kb.locale_manager, {
-        label_name:     { key: 'label_name' },
-        label_email:    { key: 'label_email' },
-        label_date:     { key: 'label_date' }
-      }, this);
-      kb.observables(model, {
-        name:           { key: 'name', write: true },
-        email:          { key: 'email', write: true },
-        date:           { key: 'date', write: true, localizer: LongDateLocalizer }
-      }, this);
-    };
-    var collection_observable = Knockback.collectionObservable(collection, view_model.contacts, {
-      view_model:       ContactViewModel,
-      sort_attribute:   'name'
-    });
+        label_title_new:    { key: 'label_title_new' },
+        label_button_new:   { key: 'label_button_new' },
+        label_name:         { key: 'label_name' },
+        label_email:        { key: 'label_email' },
+        label_date:         { key: 'label_date' }
+      }, view_model);
 
-    ko.applyBindings(view_model);
-  </script>
+      var ContactViewModel = function(model) {
+        kb.observables(kb.locale_manager, {
+          label_name:     { key: 'label_name' },
+          label_email:    { key: 'label_email' },
+          label_date:     { key: 'label_date' }
+        }, this);
+        kb.observables(model, {
+          name:           { key: 'name', write: true },
+          email:          { key: 'email', write: true },
+          date:           { key: 'date', write: true, localizer: LongDateLocalizer }
+        }, this);
+      };
+      var collection_observable = Knockback.collectionObservable(collection, view_model.contacts, {
+        view_model:       ContactViewModel,
+        sort_attribute:   'name'
+      });
 
-</body>
+      ko.applyBindings(view_model);
+    </script>
+
+  </body>
 </html>
