Upgraded Knockout 1.3.0beta to 1.3.0rc

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -15,33 +15,33 @@
 <body>
   <div class="test-block">
     <h1 class="qunit-header">Interactive Tests (knockout-1.2.1.js)</h1>
-    <iframe class="full_width" src="interactive/test.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe class="full_width" src="interactive/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
     <h1 class="qunit-header">Knockback.js - All Tests (knockout-1.2.1.js)</h1>
-    <iframe src="knockback_collection_observable/test.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_formatted_observable/test.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_localized_observable/test.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_observable/test.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_observables/test.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_triggered_observable/test.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_view_model/test.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="backbone_modelref/test.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_collection_observable/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_formatted_observable/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_localized_observable/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observable/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observables/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_triggered_observable/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_view_model/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="backbone_modelref/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
-    <h1 class="qunit-header">Interactive Tests (knockout-1.3.beta.js)</h1>
-    <iframe class="full_width" src="interactive/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
+    <h1 class="qunit-header">Interactive Tests (knockout-1.3.0.js)</h1>
+    <iframe class="full_width" src="interactive/test-1.3.0.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
-    <h1 class="qunit-header">Knockback.js - All Tests (knockout-1.3.beta.js)</h1>
-    <iframe src="knockback_collection_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_formatted_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_localized_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_observables/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_triggered_observable/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_view_model/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="backbone_modelref/test-1.3.beta.html" scrolling="auto" frameborder="0"></iframe>
+    <h1 class="qunit-header">Knockback.js - All Tests (knockout-1.3.0.js)</h1>
+    <iframe src="knockback_collection_observable/test-1.3.0.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_formatted_observable/test-1.3.0.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_localized_observable/test-1.3.0.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observable/test-1.3.0.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observables/test-1.3.0.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_triggered_observable/test-1.3.0.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_view_model/test-1.3.0.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="backbone_modelref/test-1.3.0.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 </body>
 </html>
