--- a/test/interactive/test-1.3.0.html
+++ b/test/interactive/test-1.3.0.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="../vendor/jquery.tmpl.js"></script>
 
     <!-- LIBRARY DEPENDENCIES -->
-    <script type="text/javascript" src="../../dependencies/knockout-1.3.0beta.debug.js"></script>
+    <script type="text/javascript" src="../../dependencies/knockout-1.3.0rc.debug.js"></script>
     <script type="text/javascript" src="../../dependencies/underscore.js"></script>
     <script type="text/javascript" src="../../dependencies/backbone.js"></script>
     <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.js"></script>
