--- a/test/knockback_localized_observable/test-1.3.0.html
+++ b/test/knockback_localized_observable/test-1.3.0.html
@@ -3,7 +3,7 @@
 <head>
   <title>Knockback.LocalizedObservable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../dependencies/knockout-1.3.0beta.debug.js"></script>
+  <script type="text/javascript" src="../../dependencies/knockout-1.3.0rc.debug.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
   <script type="text/javascript" src="../../dependencies/backbone.js"></script>
 
