--- a/test/knockback_observable/test-2.0.0.html
+++ b/test/knockback_observable/test-2.0.0.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback.LocalizedObservable Test Suite</title>
+  <title>Knockback.Observable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../dependencies/knockout-1.3.0rc.debug.js"></script>
+  <script type="text/javascript" src="../../dependencies/knockout-2.0.0.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
   <script type="text/javascript" src="../../dependencies/backbone.js"></script>
 
@@ -12,9 +12,6 @@
 
   <!-- HELPERS -->
   <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
-  <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
-  <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
-  <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
@@ -25,7 +22,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback.LocalizedObservable Test Suite</h1>
+    <h1 id="qunit-header">Knockback.Observable Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
