--- a/test/knockback_observables/test-2.0.0.html
+++ b/test/knockback_observables/test-2.0.0.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback.ForamttedObservable Test Suite</title>
+  <title>Knockback.Observables Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
-  <script type="text/javascript" src="../../dependencies/knockout-1.3.0rc.debug.js"></script>
+  <script type="text/javascript" src="../../dependencies/knockout-2.0.0.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
   <script type="text/javascript" src="../../dependencies/backbone.js"></script>
 
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback.ForamttedObservable Test Suite</h1>
+    <h1 id="qunit-header">Knockback.Observables Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
