Upgraded Backbone to 0.9.2 (changed attribute hash) including a backwards compatibility check. Renamed tests suites to "latest" and "legacy" to generalize their purposes.

--- a/test/all_tests.html
+++ b/test/all_tests.html
@@ -14,34 +14,34 @@
 </head>
 <body>
   <div class="test-block">
-    <h1 class="qunit-header">Interactive Tests (knockout-1.2.1.js)</h1>
-    <iframe class="full_width" src="interactive/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
+    <h1 class="qunit-header">Interactive Tests (Latest Knockout.js and Backbone.js)</h1>
+    <iframe class="full_width" src="interactive/test-latest.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
-    <h1 class="qunit-header">Knockback.js - All Tests (knockout-1.2.1.js)</h1>
-    <iframe src="knockback_collection_observable/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_formatted_observable/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_localized_observable/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_observable/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_observables/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_triggered_observable/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_view_model/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="backbone_modelref/test-1.2.1.html" scrolling="auto" frameborder="0"></iframe>
+    <h1 class="qunit-header">Knockback.js - All Tests (Latest Knockout.js and Backbone.js)</h1>
+    <iframe src="knockback_collection_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_formatted_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_localized_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observables/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_triggered_observable/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_view_model/test-latest.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="backbone_modelref/test-latest.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
-    <h1 class="qunit-header">Interactive Tests (knockout-2.0.0.js)</h1>
-    <iframe class="full_width" src="interactive/test-2.0.0.html" scrolling="auto" frameborder="0"></iframe>
+    <h1 class="qunit-header">Interactive Tests (Legacy Knockout-1.2.1.js and Backbone-0.9.1.js)</h1>
+    <iframe class="full_width" src="interactive/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <div class="test-block">
-    <h1 class="qunit-header">Knockback.js - All Tests (knockout-2.0.0.js)</h1>
-    <iframe src="knockback_collection_observable/test-2.0.0.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_formatted_observable/test-2.0.0.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_localized_observable/test-2.0.0.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_observable/test-2.0.0.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_observables/test-2.0.0.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_triggered_observable/test-2.0.0.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="knockback_view_model/test-2.0.0.html" scrolling="auto" frameborder="0"></iframe>
-    <iframe src="backbone_modelref/test-2.0.0.html" scrolling="auto" frameborder="0"></iframe>
+    <h1 class="qunit-header">Knockback.js - All Tests (Legacy Knockout-1.2.1.js and Backbone-0.9.1.js)</h1>
+    <iframe src="knockback_collection_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_formatted_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_localized_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_observables/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_triggered_observable/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="knockback_view_model/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
+    <iframe src="backbone_modelref/test-legacy_ko-1.2.1_bb-0.9.1.html" scrolling="auto" frameborder="0"></iframe>
   </div>
 </body>
 </html>
