--- a/test/backbone_modelref/test-latest.html
+++ b/test/backbone_modelref/test-latest.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback.ViewModel Test Suite</title>
+  <title>Knockback with Backbone.ModelRef Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../dependencies/knockout-2.0.0.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
-  <script type="text/javascript" src="../../dependencies/backbone.js"></script>
+  <script type="text/javascript" src="../../dependencies/backbone-0.9.2.js"></script>
+  <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
@@ -25,7 +26,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback.ViewModel Test Suite</h1>
+    <h1 id="qunit-header">Knockback with Backbone.ModelRef Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
