--- a/test/knockback_localized_observable/test-legacy_ko-1.2.1_bb-0.9.1.html
+++ b/test/knockback_localized_observable/test-legacy_ko-1.2.1_bb-0.9.1.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback with Backbone.ModelRef Test Suite</title>
+  <title>Knockback.LocalizedObservable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../dependencies/knockout-1.2.1.debug.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
-  <script type="text/javascript" src="../../dependencies/backbone.js"></script>
-  <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.js"></script>
+  <script type="text/javascript" src="../../dependencies/backbone-0.9.1.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
@@ -26,7 +25,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback with Backbone.ModelRef Test Suite</h1>
+    <h1 id="qunit-header">Knockback.LocalizedObservable Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
