--- a/test/interactive/test-latest.html
+++ b/test/interactive/test-latest.html
@@ -11,7 +11,7 @@
     <!-- LIBRARY DEPENDENCIES -->
     <script type="text/javascript" src="../../dependencies/knockout-2.0.0.js"></script>
     <script type="text/javascript" src="../../dependencies/underscore.js"></script>
-    <script type="text/javascript" src="../../dependencies/backbone.js"></script>
+    <script type="text/javascript" src="../../dependencies/backbone-0.9.2.js"></script>
     <script type="text/javascript" src="../../dependencies/optional/backbone-modelref.js"></script>
 
     <!-- LIBRARY -->
