--- a/test/knockback_formatted_observable/test-latest.html
+++ b/test/knockback_formatted_observable/test-latest.html
@@ -1,17 +1,20 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Knockback.CollectionObservable Test Suite</title>
+  <title>Knockback.ForamttedObservable Test Suite</title>
   <!-- LIBRARY DEPENDENCIES -->
   <script type="text/javascript" src="../../dependencies/knockout-2.0.0.js"></script>
   <script type="text/javascript" src="../../dependencies/underscore.js"></script>
-  <script type="text/javascript" src="../../dependencies/backbone.js"></script>
+  <script type="text/javascript" src="../../dependencies/backbone-0.9.2.js"></script>
 
   <!-- LIBRARY -->
   <script type="text/javascript" src="../../knockback.js"></script>
 
   <!-- HELPERS -->
   <script type="text/javascript" src="../../examples_lib/build/examples_lib.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.culture.en-GB.js"></script>
+  <script type="text/javascript" src="../vendor/globalize/globalize.culture.fr-FR.js"></script>
 
   <!-- TESTS -->
   <link rel="stylesheet" href="../vendor/qunit/qunit.css" type="text/css" media="screen" />
@@ -22,7 +25,7 @@
 </head>
 <body>
   <div>
-    <h1 id="qunit-header">Knockback.CollectionObservable Test Suite</h1>
+    <h1 id="qunit-header">Knockback.ForamttedObservable Test Suite</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
